allow_experimental_apis = true
deps += ['hash', 'lpm', 'eventdev']
sources = files('main.c', 'doca_gw.h', 'doca_gw.c'
    , 'doca_utils.h', 'doca_net.h', 'gw.c', 'gw.h'
    , 'doca_ft_key.h', 'doca_ft_key.c' , 'doca_ft.c' 
    , 'doca_ft.h' , 'doca_pcap.h' , 'doca_pcap.c'
    , 'doca_log.h' , 'doca_log.c'
    , 'gw_port.h' , 'gw_port.c'
    , 'doca_pkt.h' , 'doca_pkt.c'
    , 'doca_kpi.h' ,'doca_kpi.c'
    , 'doca_fib.h' ,'doca_fib.c'
    , 'doca_gauge.h' ,'doca_gauge.c'
    , 'doca_gw_dpdk.h', 'doca_gw_dpdk.c', 'doca_debug_dpdk.c',
)
