allow_experimental_apis = true
deps += ['hash', 'lpm', 'eventdev']
sources = files('main.c', 'doca_flow.h', 'doca_flow.c'
    , 'doca_utils.h', 'doca_net.h', 'gw.c', 'gw.h'
    , 'doca_ft_key.h', 'doca_ft_key.c' , 'doca_ft.c'
    , 'doca_ft.h' , 'doca_pcap.h' , 'doca_pcap.c'
    , 'doca_log.h' , 'doca_log.c'
    , 'gw_port.h' , 'gw_port.c'
    , 'doca_pkt.h' , 'doca_pkt.c'
    , 'doca_kpi.h' ,'doca_kpi.c'
    , 'doca_fib.h' ,'doca_fib.c'
    , 'doca_gauge.h' ,'doca_gauge.c'
    , 'doca_dpdk.h', 'doca_dpdk.c', 'doca_debug_dpdk.c'
    , 'doca_id_pool.h', 'doca_id_pool.c'
    , 'doca_dpdk_priv.h', 'simple_fwd.c', 'simple_fwd.h'
    , 'doca_encap_table.h', 'doca_encap_table.c'
    , 'doca_flow_chain.h' , 'doca_flow_chain.c'
    , 'rte_flow_v2.h', 'rte_flow_v2.c'
    , 'doca_dpdk_offload.h', 'doca_dpdk_offload.c'
)
